# ParPar

./: .gitignore  .markdownlint.json  .npmrc  BENCHMARKING.md  README.md  REVIEW.md  binding.gyp  compute_mu  compute_mu2  fast-gf-multiplication.md  gf.cc  help-full.txt  help.txt  package-lock.json  package.json  parpar.js  test_barrett  test_barrett2  test_barrett3  test_gf32_minimal  verify_naive
.github/workflows/: build-dev-linux-glibc-aarch64.yml  build-dev-linux-glibc-amd64.yml  build-dev-linux-glibc-armv7l.yml  build-dev-linux-static-aarch64.yml  build-dev-linux-static-amd64.yml  build-dev-linux-staticglibc-aarch64.yml  build-dev-mac-arm64.yml  build-dev-mac-x64.yml  build-dev-win64.yml  build.yml  par3-tests.yml  test-e2e.yml  test-full.yml  test.yml
.mo/notepads/par3-further-speed/: learnings.md
.sisyphus/: boulder.json
.sisyphus/evidence/final-qa/: SCOPE_FIDELITY.md  TEST_RESULTS.md
.sisyphus/notepads/: par3-implementation.md
.sisyphus/notepads/avx2-region-mul/: learnings.md
.sisyphus/plans/: gf64-integration-cleanup.md  gf64-simd-rebuild.md  par2-avx512-repair.md  par3-gf32-implementation.md
benchmarks/: bench.js  info.md
cli/: util.js
evidence/final-qa/: edge2-n0.txt  test-output.txt
examples/: chunked.js  simple.js
gf-complete/: README.txt  gf.c  gf_complete.h  gf_int.h  gf_w16.c  gf_w16.h  gf_w16_additions.c  gf_w16_neon.c  gf_w16_split.c  gf_w16_xor.c  gf_w16_xor_jit_stub_masm64.asm  module.c  module.cc  module.h  platform.h  x86_jit.c  x86_jit.h
gf-complete/gf_w16/: affine.h  affine128.c  affine512.c  shuffle.h  shuffle128.c  shuffle128_neon.c  shuffle256.c  shuffle512.c  shuffle_common.c  x86_jit.c  xor.h  xor128.c  xor256.c  xor512.c  xor512multi.c  xor_common.c  xor_jit_stub_masm64.asm
gf16/: controller.cpp  controller.h  controller_cpu.cpp  controller_cpu.h  controller_ocl.cpp  controller_ocl.h  controller_ocl_init.cpp  gf16_affine.h  gf16_affine2x_x86.h  gf16_affine_avx10.c  gf16_affine_avx10.h  gf16_affine_avx2.c  gf16_affine_avx512.c  gf16_affine_bmm.c  gf16_affine_gfni.c  gf16_bitdep_init_avx2.h  gf16_bitdep_init_sse2.h  gf16_checksum_arm.h  gf16_checksum_generic.h  gf16_checksum_rvv.h  gf16_checksum_sve.h  gf16_checksum_x86.h  gf16_cksum.h  gf16_cksum_avx2.c  gf16_cksum_avx512.c  gf16_cksum_base.h  gf16_cksum_generic.c  gf16_cksum_neon.c  gf16_cksum_rvv.c  gf16_cksum_sse2.c  gf16_cksum_sve.c  gf16_cksum_x86.h  gf16_clmul.h  gf16_clmul_neon.c  gf16_clmul_neon.h  gf16_clmul_neon_base.h  gf16_clmul_rvv.c  gf16_clmul_rvv.h  gf16_clmul_sha3.c  gf16_clmul_sve2.c  (+96 more)
gf16/opencl-include/: cl.c  cl.h  readme.txt
gf16/opencl-include/CL/: cl.h  cl.hpp  (+2 more)
gf32/test/: test_repair_already_complete.sh  test_repair_cli_help.sh  test_repair_corrupt.sh  test_repair_large_1m_blocks.sh  test_repair_lost_recovery.sh  test_repair_max_damage.sh  test_repair_missing_source.sh  test_repair_multiple.sh  test_repair_single.sh  test_repair_speed_avx2.sh  test_repair_speed_avx512.sh  test_repair_speed_ssse3.sh  test_repair_target_missing.sh  test_repair_verify_only.sh  test_zero_recovery.sh
gf64/: gf64_dispatch.c  gf64_global.h  gf64_inline.h  gf64_invert.c  gf64_invert.h  gf64_region_avx2.c  gf64_region_avx2_arr.c  gf64_region_avx512.c  gf64_region_avx512_arr.c  gf64_region_scalar.c  gf64_region_ssse3.c  gf64_region_ssse3_arr.c  gf64_single.c  gf64_solve.c
gf64/test/: Makefile  test  test.c  test_all  test_all.c  test_avx2  test_dispatch.c
hasher/: crc_arm.h  crc_clmul.h  crc_rvzbc.h  crc_slice4.h  crc_zeropad.c  crc_zeropad.h  hasher.cpp  hasher.h  hasher_armcrc.cpp  hasher_avx2.cpp  hasher_avx512.cpp  hasher_avx512vl.cpp  hasher_base.h  hasher_bmi1.cpp  hasher_clmul.cpp  hasher_impl.h  hasher_input.cpp  hasher_input.h  hasher_input_base.h  hasher_input_impl.h  hasher_input_stub.h  hasher_md5crc.cpp  hasher_md5crc.h  hasher_md5crc_base.h  hasher_md5crc_impl.h  hasher_md5crc_stub.h  hasher_md5mb.cpp  hasher_md5mb.h  hasher_md5mb_base.h  hasher_md5mb_impl.h  hasher_md5mb_stub.h  hasher_neon.cpp  hasher_neoncrc.cpp  hasher_rvzbc.cpp  hasher_scalar.cpp  hasher_sse.cpp  hasher_stub.h  hasher_sve2.cpp  hasher_xop.cpp  md5-arm-asm.h  (+24 more)
info/: log-tricks.md  parpar-methods.md
lib/: arg_parser.js  bufferpool.js  filechunkreader.js  fileseqreader.js  gf64_js.js  gf_method_bench.js  par2.js  par2gen.js  par2outfile.js  par3gen.js  parpar.js  procqueue.js  queue.js  throttlequeue.js  timeoutwrap.js  writev.js
md5/: md5-simd.c  md5-sse2.c  md5.c  md5.h
nexe/: blank.js  build.js  ncp.js  package.json
scripts/: postbuild-patchelf.sh  prebuild-check.js
src/: cpuid.h  gf.cc  gf64_addon.cc  gf64_stub.cc  gyp_warnings.c  gyp_warnings.cc  par3_engine.cc  par3_engine.h  platform.h  platform_warnings.c  stdint.h
test/: cached-cmpref-fast.json  common.cmake  e2e-par2-create.js  e2e-par3-create.js  e2e-par3-cross-compat.js  e2e-par3-large-file.js  e2e-par3-repair.js  gf64-js.test.js  gf_method_bench.js  md5.js  par-compare.js  par3-gf64-mularr-parity.js  par3-golden.js  par3-isa-check.js  par3-kernel-parity.js  par3-method-dispatch.js  par3-native-edge.js  par3-native-fidelity.js  par3-native-perf.js  par3-recovery-perf.js  par3-regression.js  par3-repair-parity.js  par3-repair-parse.js  par3-repair-simd.js  test-delay-throttle.js  test-deprecated-buffer.js  test-double-break.js  test-implicit-global.js  throttlequeue.js
test/bench/: CMakeLists.txt  bench-helpers.js  bench.h  gf16-ctrl.cpp  gf16-inv.cpp  gf16-pmul.cpp  gf16.cpp  hasher.cpp  par2-create-bench.js  par3-compare-turbo.js  par3-create-bench-large.js  par3-create-bench.js  par3-repair-bench.js  run-all.js
test/e2e/: helpers.js
test/fixtures/: generate-format-report.js  mini-test.par3  par3-format-report.md  par3-golden-par3cmdline.par3  par3-golden-par3cmdline.vol0+1.par3  par3-golden-parpar.par3  par3-spec-amendments.md
test/gf16/: CMakeLists.txt  gf16_common.cmake  test-ctrl.cpp  test-inv.cpp  test-pmul.cpp  test.cpp  test.h
test/gf16/p2c-inv/: galois.h  reedsolomon.cpp  reedsolomon.h
test/hasher/: CMakeLists.txt  hasher_common.cmake  test.cpp
xor_depends/: bench.sh  gfc.patch  info.md
(+12 files in other folders)
